finish off Devise views. [#98320888]

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -130,3 +130,14 @@ en:
   change_my_password: "Change My Password"
   new_password_heading: "Forgot your password?"
   submit_new_password_form: "Send me reset password instructions"
+  new_session_heading: "New Session"
+  new_session_submit: "Log In"
+  sign_in_link: "Sign in"
+  sign_up_link: "Sign up"
+  forgot_password_link: "Forgot your password?"
+  new_confirmation_link: "Didn't receive confirmation instructions?"
+  new_unlock_link: "Didn't receive unlock instructions?"
+  omniauth_link: "Sign in with %{provider}"
+  resend_unlock_header: "Resend unlock instructions"
+  submit_new_unlock: "Resend unlock instructions"
+  password: "Password"
